Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
          <li><a href="B2+/">B6+</a></li>
          <li><a href="VOWELS/">VOWELS</a></li>
          <li><a href="ROOTS/">ROOTS</a></li>
+         <li><a href="MOOD/">MOOD</a></li>
          <li><a href="DRINKS_HASH_FUNC/">DRINK_HASH_FUNC</a></li>
          <li><a href="DRINKS_HASH_CLASS/">DRINK_HASH_CLASS</a></li>
+         <li><a href="VOWELS_ARR/">VOWELS_ARR</a></li>
          <li><a href="DYN_FORM/">DYN_FORM</a></li>
          <li><a href="VALID_FORM/">VALID_FORM</a></li>
+         <li><a href="CLOCK_DOM/">CLOCK_DOM</a></li>
       </ul>
    </body>
 </html>
