Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
          <li><a href="DYN_FORM/">DYN_FORM</a></li>
          <li><a href="VALID_FORM/">VALID_FORM</a></li>
          <li><a href="CLOCK_DOM/">CLOCK_DOM</a></li>
+         <li><a href="SNAKE2/">SNAKE2</a></li>
       </ul>
    </body>
 </html>
